--- a/src/app/(pages)/login/LoginForm/index.module.scss
+++ b/src/app/(pages)/login/LoginForm/index.module.scss
@@ -1,20 +1,13 @@
 @import "../../../_css/common";
 
 .form {
+  width: 100%;
   margin-bottom: var(--base);
   display: flex;
   flex-direction: column;
-  gap: calc(var(--base) / 2);
+  gap: 28px;
+  margin-top: 30px;
   align-items: flex-start;
-  width: 66.66%;
-
-  @include mid-break {
-    width: 100%;
-  }
-}
-
-.submit {
-  margin-top: calc(var(--base) / 2);
 }
 
 .message {
