--- a/src/app/_components/Button/index.module.scss
+++ b/src/app/_components/Button/index.module.scss
@@ -8,10 +8,11 @@
   background-color: transparent;
   text-decoration: none;
   display: inline-flex;
-  padding: 12px 24px;
+  padding: 10px 24px;
   font-family: inherit;
   line-height: inherit;
   font-size: inherit;
+  border-radius: 8px;
 }
 
 .content {
@@ -34,13 +35,14 @@
 }
 
 .appearance--primary {
-  background-color: var(--theme-elevation-1000);
+  background-color: rgb(99 102 241);
   color: var(--theme-elevation-0);
 }
 
 .appearance--secondary {
   background-color: transparent;
-  box-shadow: inset 0 0 0 1px var(--theme-elevation-1000);
+  box-shadow: inset 0 0 0 1px rgb(79 70 229);
+  color: rgb(79 70 229);
 }
 
 .primary--invert {
