--- a/src/app/_components/CheckBox/index.module.scss
+++ b/src/app/_components/CheckBox/index.module.scss
@@ -1,27 +1,19 @@
 @import '../../_css/common';
 
-.checkboxWrapper {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  white-space: nowrap;
-  cursor: pointer;
-}
-
 .checkbox {
   -webkit-appearance: none;
   appearance: none;
-  width: 24px;
-  height: 24px;
-  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
   background-color: white;
-  border: 2px solid var(--color-dark-500);
+  border: 2px solid #d1d5db;
   outline: none;
   cursor: pointer;
 }
 
 .checkbox:checked {
-  background-color: var(--color-dark-500);
+  background-color: #6366f1;
   position: relative;
 }
 
