--- a/src/app/_components/RadioButton/index.module.scss
+++ b/src/app/_components/RadioButton/index.module.scss
@@ -1,21 +1,13 @@
 @import '../../_css/common';
 
-.radioWrapper {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  white-space: nowrap;
-  cursor: pointer;
-}
-
 .radio {
   -webkit-appearance: none;
   appearance: none;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background-color: white;
-  border: 2px solid var(--color-dark-500);
+  border: 2px solid #d1d5db;
   outline: none;
   cursor: pointer;
 }
@@ -29,10 +21,10 @@
 .radio:checked::before {
   content: "";
   display: inline-block;
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
-  background-color: var(--color-dark-500);
+  background-color: #6366f1;
   position: absolute;
   top: 50%;
   left: 50%;
