--- a/src/app/_components/CheckBox/index.module.scss
+++ b/src/app/_components/CheckBox/index.module.scss
@@ -19,10 +19,10 @@
 
 .checkbox:checked::before {
   content: '\2713';
-  font-size: 14px;
+  font-size: 10px;
   font-weight: bold;
   color: #fff;
   position: absolute;
-  right: 5px;
-  top: 0;
+  right: 4px;
+  top: -3px;
 }
